<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.6</version>
	</parent>

	<groupId>no.nav.saf</groupId>
	<artifactId>saf</artifactId>
	<packaging>pom</packaging>
	<version>1-SNAPSHOT</version>

	<modules>
		<module>app</module>
		<module>core</module>
		<module>dokumentoversikt</module>
		<module>graphiql</module>
		<module>hentdokument</module>
		<module>journalpost</module>
		<module>tilknyttedejournalposter</module>
		<module>sak</module>
	</modules>

	<properties>
		<java.version>17</java.version>

		<graphql-java.version>20.0</graphql-java.version>
		<resilience4j.version>1.7.1</resilience4j.version>
		<token-support.version>2.1.9</token-support.version>
		<commons-text.version>1.10.0</commons-text.version>
		<springdoc-openapi-ui.version>1.6.14</springdoc-openapi-ui.version>
		<logstash-logback-encoder.version>7.2</logstash-logback-encoder.version>
		<logback-syslog4j.version>1.0.0</logback-syslog4j.version>

		<bcprov-jdk15on.version>1.70</bcprov-jdk15on.version>

		<!-- test -->
		<!-- Versjonen over 3.0.3 gir trøbbel - blir problem med mock-oauth2-dep.
		En test i DokumentoversiktBrukerIT feiler når flere testklasser blir kjørt samtidig -->
		<spring-cloud-starter-contract-stub-runner.version>3.0.3</spring-cloud-starter-contract-stub-runner.version>

		<!-- Plugins -->
		<maven-toolchains-plugin.version>3.1.0</maven-toolchains-plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>no.nav.saf</groupId>
				<artifactId>core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.saf</groupId>
				<artifactId>dokumentoversikt</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.saf</groupId>
				<artifactId>journalpost</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.saf</groupId>
				<artifactId>tilknyttedejournalposter</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.saf</groupId>
				<artifactId>hentdokument</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.saf</groupId>
				<artifactId>graphiql</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.saf</groupId>
				<artifactId>sak</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>io.github.resilience4j</groupId>
				<artifactId>resilience4j-spring-boot2</artifactId>
				<version>${resilience4j.version}</version>
			</dependency>
			<dependency>
				<groupId>com.graphql-java</groupId>
				<artifactId>graphql-java</artifactId>
				<version>${graphql-java.version}</version>
			</dependency>

			<dependency>
				<groupId>net.logstash.logback</groupId>
				<artifactId>logstash-logback-encoder</artifactId>
				<version>${logstash-logback-encoder.version}</version>
			</dependency>
			<dependency>
				<groupId>com.papertrailapp</groupId>
				<artifactId>logback-syslog4j</artifactId>
				<version>${logback-syslog4j.version}</version>
				<exclusions>
					<exclusion>
						<groupId>ch.qos.logback</groupId>
						<artifactId>logback-core</artifactId>
					</exclusion>
					<exclusion>
						<groupId>ch.qos.logback</groupId>
						<artifactId>logback-classic</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-ui</artifactId>
				<version>${springdoc-openapi-ui.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-text</artifactId>
				<version>${commons-text.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.security</groupId>
				<artifactId>token-validation-spring</artifactId>
				<version>${token-support.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.security</groupId>
				<artifactId>token-validation-core</artifactId>
				<version>${token-support.version}</version>
			</dependency>
			<dependency>
				<groupId>org.bouncycastle</groupId>
				<artifactId>bcprov-jdk15on</artifactId>
				<version>${bcprov-jdk15on.version}</version>
			</dependency>

			<!-- test -->
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-starter-contract-stub-runner</artifactId>
				<version>${spring-cloud-starter-contract-stub-runner.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>no.nav.security</groupId>
				<artifactId>token-validation-spring-test</artifactId>
				<version>${token-support.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-toolchains-plugin</artifactId>
				<version>${maven-toolchains-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>toolchain</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<toolchains>
						<jdk>
							<version>${java.version}</version>
							<vendor>openjdk</vendor>
						</jdk>
					</toolchains>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
